[metadata]
name = my_package
version = attr: coursectl.__version__
description = CLI tool to manage to courses on Community LMS
license = MIT

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    click

[options.entry_points]
console_scripts =
    coursectl = coursectl.cli:main 